# multiple-consumer-sqs-service

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
mcsqs/: sns_manager.py  sqs_manager.py
mcsqs/utils/: boto_helper.py
test/: conftest.py  test_mcsqs.py
